fixed overflow pre/code in css
--HG--
extra : convert_revision : svn%3A356ac844-b298-4ddf-8d45-ff5fd532e645/planet-terasi/trunk%40215

--- a/output/terasi.css
+++ b/output/terasi.css
@@ -30,6 +30,10 @@ h1, h2, h3, h4, h5, h6 {
     font-family: sans-serif;
 }
 
+pre, code {
+    overflow: scroll;
+}
+
 img {
     padding: 5px;
 }
